Closed Bug 968104 Opened 11 years ago Closed 3 years ago

Plain text paste (CTRL+SHIFT+V) doesn't work anymore

Categories

(Core :: DOM: Editor, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
relnote-firefox --- 104+
firefox104 --- fixed

People

(Reporter: bugzilla, Assigned: enndeakin)

References

Details

Attachments

(1 file)

Firefox used to have a option of pasting plain text of the clipboard by using CTLR+SHIFT+V I cant get it working anymore. Using nightly To reproduce: 1) copy any text 2) try to press CTRL+SHIFT+V in fx the location field CTRL+SHIFT+V doesn't do anything anymore. Not even in the location field.
This bug's logged to the Core product. However, Ctrl+Shift+V works as expected in SeaMonkey 2.26.1 on openSUSE 13.1. So perhaps this is a Firefox-only or Microsoft Windows-only problem.
I used quiet often to paste plain text. After updated to version 56, shortcut CTRL+SHIFT+V exit Firefox immediately. This is bad.
See Also: → 1718929

This bug is reported for Windows 7, 1707205 for Linux, and 1718929 for MacOS.

See also Bug 1679127.

See also Bug 1751185 for Lightning.

Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Pushed by neil@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/18bcfc7aef86 paste unformatted shortcut (shift+ctrl/cmd+v) should work in plain text contexts, such as input and textarea, r=masayuki
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
Regressions: 1779042
Component: DOM: Serializers → DOM: Editor
See Also: → 1792010
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: