Bug 968104, paste unformatted shortcut (shift+ctrl/cmd+v) should work in plain text contexts, such as input and textarea, r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D150806